# cpp_best_practice

./: .gitignore  CMakeLists.txt  torch_conv.py
opencl/: CMakeLists.txt  main.cpp
opencl/OpenCLUtilities/: context.cpp  opencl_backend.cpp  opencl_backend.h
opencl/cl/: conv_2d.cl
pool/: CMakeLists.txt  Pool.cpp  Pool.h
register/: backend.cpp  backend.h  core  cpu.cpp  cpu.h  main.cpp
scripts/: build.sh
src/: executor.cc
src/backends/cpu/: cpu_backend.cc  cpu_backend.h
src/backends/opencl/: CMakeLists.txt  context.cpp  context.h  opencl_backend.cc  opencl_backend.h
src/backends/opencl/cl/: conv_2d.cl
src/core/: backend.cpp  backend.h  bfc_allocator.cc  bfc_allocator.h  common_shape_fns.h  config_parser.cpp  config_parser.h  define.h  device.cc  device.h  dlcl_tensor.cc  dlcl_tensor.h  env_time.cc  env_time.h  error.cc  error.hpp  executor.h  executor_factory.cc  executor_factory.h  kernel_builder.cc  kernel_builder.h  logging.cc  logging.h  macros.h  node_def_builder.cc  node_def_builder.h  non_copyable.h  op.cc  op.h  op_builder.cc  op_builder.h  op_kernel.cc  op_kernel.h  pool.cc  pool.h  port.cc  port.h  refcount.h  selective_registration.h  session_state.h  (+9 more)
src/core/graph/: graph.h  node.h
src/core/platform/: env.cc  env.h  env_time.cc
src/core/protos/: attr_value.proto  kernel_def.proto  node_def.proto  op_def.proto  tensor.proto  tensor_shape.proto  types.proto
src/lib/common/: CMakeLists.txt
src/lib/common/stream_executor/lib/: demangle.cc  demangle.h  env.h  error.h  human_readable.h  initialize.h  mathutil.h  numbers.cc  numbers.h  path.cc  path.h  process_state.cc  process_state.h  reporter.cc  reporter.h  stacktrace.h  status.h  statusor.cc  statusor.h  statusor_internals.h  statusor_test.cc  thread_options.h  threadpool.h
src/lib/common/stream_executor/platform/: abi.cc  abi.h  abi_test.cc  blocking_counter.h  context.h  cord.h  cpu_info.cc  cpu_info.h  denormal.cc  denormal.h  dynamic_annotations.h  env.cc  env.h  env_time.h  env_var.cc  env_var.h  error.cc  error.h  errors.h  file_statistics.h  file_system.cc  file_system.h  file_system_helper.cc  file_system_helper.h  hash.cc  hash.h  host_info.h  initialize.h  load_library.h  logging.cc  logging.h  mem.h  mutex.h  numa.h  numbers.cc  numbers.h  numbers_test.cc  path.cc  path.h  port.h  (+29 more)
src/lib/common/stream_executor/platform/default/: env.cc  env_time.cc  load_library.cc  mutex.cc  net.cc  port.cc  posix_file_system.cc  posix_file_system.h  stacktrace.h  stacktrace_handler.cc  test.cc  test_benchmark.cc  test_benchmark.h  tracing.cc
src/utils/: gpu_kernel_helper.h
tensor/: tensor.cpp  tensor.h
test/: CMakeLists.txt  main.cpp  test_backend.cpp  test_config_parser.cpp  test_define.cpp  test_helper.h  test_logging.cpp  test_pool.cpp  test_register_kernel.cpp  test_register_op.cpp  test_suite.cpp  test_suite.h  test_tensor.cpp  test_utils.h
test/ops/: test_add.cpp  test_conv.cpp
tools/converter/: CMakeLists.txt
tools/converter/converter/: converter.cpp
tools/converter/converter/core/: converter.cc  converter.h  dlcl.proto  op_converter.cc  op_converter.h  optimizer.cc  optimizer.h
tools/converter/converter/graph/: graph.cc  graph.h  graph_constructor.cc  graph_constructor.h
tools/converter/converter/onnx/: onnx_converter.cc  onnx_converter.h  onnx_utils.cc  onnx_utils.h
tools/converter/converter/optimizers/: op_types.cc  remapper.cc
tools/converter/converter/test/: generate_model.py
tools/memory_manager/: CMakeLists.txt  README.md
tools/memory_manager/memory_manager/core/: allocator.cc  allocator.h  allocator_registry.cc  allocator_registry.h  bfc_allocator.h  cpu_allocator.cc  mem.h  tensor.cc  tensor.h  tensor_shape.cc  tensor_shape.h  typed_allocator.h  types.h
tools/memory_manager/memory_manager/core/proto/: allocation_description.proto  tensor.proto
tools/memory_manager/memory_manager/platform/: default_port.cc
tools/memory_manager/memory_manager/test/: test_main.cpp
tools/memory_manager/memory_manager/utils/: define.h  env_time.cc  error.cc  error.hpp  logging.cc  logging.h  registry.cc
tools/session/: CMakeLists.txt
tools/session/session/core/: allocator.h  build_graph_options.h  collective_order.h  costmodel.cc  costmodel.h  costmodel_manager.cc  costmodel_manager.h  device.cc  device.h  device_base.cc  device_base.h  device_factory.cc  device_factory.h  device_mgr.cc  device_mgr.h  device_set.cc  device_set.h  direct_session.cc  direct_session.h  edgeset.cc  edgeset.h  executor.cc  executor.h  executor_factory.cc  executor_factory.h  function.cc  function.h  graph.cc  graph.h  graph_execution_state.cc  graph_execution_state.h  graph_partition.h  op.cc  op.h  op_kernel.cc  op_kernel.h  op_segment.cc  op_segment.h  session.cc  session.h  (+16 more)
tools/session/session/test/: test_session.cpp
tools/session/session/utils/: env.cc  env.h  env_time.cc  errors.h  logging.cc  logging.h  random.cc  random.h  status.cc  status.h  (+2 more)
tools/stream_executor/: CMakeLists.txt  README.md
tools/stream_executor/stream_executor/core/: allocator_stats.cc  allocator_stats.h  device_description.cc  device_description.h  device_memory.h  device_memory_allocator.h  device_options.h  kernel.cc  kernel.h  kernel_cache_config.h  kernel_spec.cc  kernel_spec.h  launch_dim.h  multi_platform_manager.cc  multi_platform_manager.h  platform.h  port.h  stream.cc  stream.h  stream_executor_internal.cc  stream_executor_internal.h  stream_executor_pimpl.cc  stream_executor_pimpl.h  timer.cc  timer.h
tools/stream_executor/stream_executor/cuda/: cuda_driver.cc  cuda_driver.h  cuda_executor.cc  cuda_executor.h  cuda_kernel.h  cuda_platform.h  cuda_stream.h  cuda_timer.h  cuda_types.h
tools/stream_executor/stream_executor/test/: test_se.cpp
tools/stream_executor/stream_executor/utils/: env.cc  env.h  env_time.cc  env_time.h  errors.h  logging.cc  logging.h  macros.h  random.cc  status.cc  status.h  status_macros.h  strcat.cc  strcat.h
tools/stream_executor/stream_executor/utils/proto/: error_codes.proto
tricks/: CMakeLists.txt  macro.cpp  namespace.cpp  stl.cc  successor.cpp
(+17 files in other folders)
